# ChangeLog for media-radio/radiotray
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-radio/radiotray/ChangeLog,v 1.11 2011/06/08 18:21:09 maekke Exp $

  08 Jun 2011; Markus Meier <maekke@gentoo.org> radiotray-0.6.3.ebuild:
  x86 stable, bug #368221

  23 May 2011; Markos Chandras <hwoarang@gentoo.org> radiotray-0.6.3.ebuild:
  Restrict python3 ABIS. Stable on amd64. Bug #368221

*radiotray-0.6.3 (21 Jan 2011)

  21 Jan 2011; Markos Chandras <hwoarang@gentoo.org> +radiotray-0.6.3.ebuild:
  Version bump

  08 Jan 2011; Christian Faulhammer <fauli@gentoo.org>
  radiotray-0.6.1.ebuild:
  stable x86, bug 349712

  26 Dec 2010; Markos Chandras <hwoarang@gentoo.org> radiotray-0.6.1.ebuild:
  Stable on amd64 wrt bug #349712

  26 Oct 2010; Markos Chandras <hwoarang@gentoo.org> radiotray-0.6.1.ebuild:
  Add dev-python/dbus-python dependency. Bug #341973

*radiotray-0.6.1 (20 Sep 2010)

  20 Sep 2010; Markos Chandras <hwoarang@gentoo.org>
  +radiotray-0.6.1.ebuild:
  Version bump

  31 Aug 2010; Markos Chandras <hwoarang@gentoo.org>
  -radiotray-0.5.1.ebuild, radiotray-0.6-r1.ebuild:
  Stable on amd64. Bug #334877. Remove old ebuild

  29 Aug 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  radiotray-0.6-r1.ebuild:
  x86 stable wrt bug #334877

  07 Aug 2010; Markos Chandras <hwoarang@gentoo.org> radiotray-9999.ebuild:
  Update Mercurial repository URL

  14 Jul 2010; Markos Chandras <hwoarang@gentoo.org>
  +radiotray-0.5.1.ebuild, +radiotray-0.6-r1.ebuild, +radiotray-9999.ebuild,
  +metadata.xml:
  Moved from media-sound category

  28 Jun 2010; Markos Chandras <hwoarang@gentoo.org>
  radiotray-0.6-r1.ebuild:
  Add missing dependencies wrt bug #324287. Thanks to Ján Bednár

  23 Jun 2010; Markos Chandras <hwoarang@gentoo.org> radiotray-9999.ebuild:
  Add LINGUAS support

  23 Jun 2010; Markos Chandras <hwoarang@gentoo.org> radiotray-9999.ebuild:
  Add missing dependencies wrt bug #324287
