@@ -1,10 +1,12 @@
 # Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-radio/radiotray/Attic/radiotray-0.6.1.ebuild,v 1.4 2011/01/08 11:52:25 fauli Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-radio/radiotray/Attic/radiotray-0.6.4.ebuild,v 1.1 2011/07/22 17:22:17 hwoarang Exp $
 
 EAPI=3
 
 PYTHON_DEPEND="2"
+RESTRICT_PYTHON_ABIS="3.*"
+
 inherit distutils
 
 DESCRIPTION="Online radio streaming player"
@@ -13,7 +15,7 @@ SRC_URI="mirror://sourceforge/${PN}/${P}.tar.gz"
 
 LICENSE="GPL-1"
 SLOT="0"
-KEYWORDS="amd64 x86"
+KEYWORDS="~amd64 ~x86"
 IUSE=""
 
 RDEPEND="dev-python/dbus-python
@@ -33,4 +35,4 @@ RDEPEND="dev-python/dbus-python
 	media-plugins/gst-plugins-soup
 	media-plugins/gst-plugins-vorbis"
 
-DEPEND="${RDEPEND}"
+DEPEND=""
