@@ -1,6 +1,12 @@
 # ChangeLog for media-radio/radiotray
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-radio/radiotray/ChangeLog,v 1.11 2011/06/08 18:21:09 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-radio/radiotray/ChangeLog,v 1.12 2011/07/22 17:22:17 hwoarang Exp $
+
+*radiotray-0.6.4 (22 Jul 2011)
+
+  22 Jul 2011; Markos Chandras <hwoarang@gentoo.org> -radiotray-0.6.1.ebuild,
+  +radiotray-0.6.4.ebuild:
+  Version bump, remove old
 
   08 Jun 2011; Markus Meier <maekke@gentoo.org> radiotray-0.6.3.ebuild:
   x86 stable, bug #368221
